Перевод темплейтов и примера Hello world (#1)
* переведен hello-world

* изменен текст-лейбл "Далее"

* обновлены темплейты и добавлен автор

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,5 +1,5 @@
 {{define "footer"}}
     <p class="footer">
-      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a> and <a href="https://eli.thegreenplace.net">Eli Bendersky</a> | <a href="https://github.com/mmcgrana/gobyexample">source</a> | <a href="https://github.com/mmcgrana/gobyexample#license">license</a>
+      by <a href="https://markmcgranaghan.com">Mark McGranaghan</a>, <a href="https://eli.thegreenplace.net">Eli Bendersky</a> and <a href="https://github.com/kuduzow">kuduzow</a>  | <a href="https://github.com/intocode/gobyexample-ru">source</a> | <a href="https://github.com/intocode/gobyexample-ru">license</a>
     </p>
 {{end}}
