--- a/templates/404.tmpl
+++ b/templates/404.tmpl
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Go by Example: Not Found</title>
+    <title>Go на примерах: Not Found</title>
     <link rel=stylesheet href="site.css">
   </head>
   <body>
     <div id="intro">
-      <h2><a href="./">Go by Example</a></h2>
+      <h2><a href="./">Go на примерах</a></h2>
       <p>Sorry, we couldn't find that! Check out the <a href="./">home page</a>?</p>
 {{ template "footer" }}
     </div>
