--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -30,7 +30,7 @@
 
       <ul>
       {{range .}}
-        <li><a href="{{.ID}}">{{.Name}}</a></li>
+        <li><a href="{{.ID}}">{{.Title}}</a></li>
       {{end}}
       </ul>
 {{ template "footer" }}
