--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -18,7 +18,7 @@
       <p>
         <em>Go на примерах</em> — это практическое введение в Go на основе
         примеров с комментариями. Начни с
-        <a href="hello-world">первого примера</a> или посмотри весь список ниже.
+        <a href="/hello-world">первого примера</a> или посмотри весь список ниже.
       </p>
 
       <p>
