добавлен хэш для каждой сборки

--- a/templates/404.tmpl
+++ b/templates/404.tmpl
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Go на примерах: Not Found</title>
-    <link rel=stylesheet href="site.css">
+    <link rel=stylesheet href="site.css?v={{.Site.CSSVersion}}">
   </head>
   <body>
     <div id="intro">
