--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Go на примерах</title>
-    <link rel=stylesheet href="site.css">
+    <link rel=stylesheet href="site.css?v={{.Site.CSSVersion}}">
   </head>
   <body>
     <div id="intro">
@@ -23,13 +23,13 @@
 
       <p>
         Примеры здесь рассчитаны на
-        <a href="https://go.dev/doc/devel/release">актуальный мажорный релиз Go</a> 
-        (если не указано иное) и могут использовать новые возможности языка. 
+        <a href="https://go.dev/doc/devel/release">актуальный мажорный релиз Go</a>
+        (если не указано иное) и могут использовать новые возможности языка.
         Если что-то не работает, попробуй обновиться до последней версии.
       </p>
 
       <ul>
-      {{range .}}
+      {{range .Examples}}
         <li><a href="{{.ID}}">{{.Title}}</a></li>
       {{end}}
       </ul>
